# Auto-Actions

./: .gitignore  CHANGELOG.md  README.md  gradle.properties  my-release-key.jks  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro  release-key.jks
app/src/androidTest/java/com/printer/information/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/c/: CMakeLists.txt  call_helper.c  call_helper.h  main.c  phone_formatter.c  phone_formatter.h  sms_helper.c  sms_helper.h  telegram_helper.c  telegram_helper.h
app/src/main/java/com/printer/information/: MainActivity.kt  MaterialTextInputReplica.kt
app/src/main/res/drawable/: action_card_background.xml  btn_refresh_outline.xml  btn_refresh_ripple.xml  edit_text_bg.xml  edit_text_bg_selector.xml  fab_background.xml  fab_bg.xml  gradient_background.xml  ic_close.xml  ic_contacts.xml  ic_history.xml  ic_message.xml  ic_phone.xml  ic_refresh.xml  outline_border.xml  textinput_outline_box.xml  wave_pattern.xml
app/src/main/res/layout/: activity_main.xml  custom_text_input.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/test/java/com/printer/information/: ExampleUnitTest.kt
assets/: CHANGELOG.md  PROJECT_STRUCTURE.md
